--- a/src/q4go.qrc
+++ b/src/q4go.qrc
@@ -58,6 +58,7 @@
     <file>sgfs/connections.sgf</file>
     <file>sgfs/captures.sgf</file>
     <file>sgfs/openings.sgf</file>
+    <file>sgfs/terminology.sgf</file>
   </qresource>
   <qresource prefix="/">
     <file>images/stone_b16.png</file>
