--- a/src/q4go.qrc
+++ b/src/q4go.qrc
@@ -41,6 +41,7 @@
     <file>images/boardwindow/fullscreen.png</file>
     <file>images/boardwindow/eye.png</file>
     <file>images/boardwindow/noeye.png</file>
+    <file>images/boardwindow/connected.png</file>
     <file>images/board/wood2.png</file>
     <file>images/board/wood1.png</file>
     <file>images/board/wood3.png</file>
